# species-identification-thermal-imaging

./: .gitignore  README.md  config.example.ini  pyproject.toml
models/: I3D + movement.py  I3D_movement.py
models-presentation3/: I3D + movement.py
notebooks/: base_model_confidence.ipynb  optical-flow.ipynb
preprocess/: preprocess-movement.py  preprocess.py
temperature_scaling/: temperature_scaling.py
